--- a/[M1S10] Ex 1 - Loja Planta/src/Styles/button.module.css
+++ b/[M1S10] Ex 1 - Loja Planta/src/Styles/button.module.css
@@ -1,5 +1,5 @@
 .primary {
-  background: linear-gradient(45deg, #28a745, #218838);
+  background: linear-gradient(45deg, #87E889, #0D450E);
   color: white;
   padding: 12px 18px;
   border-radius: 8px;
